@@ -6,6 +6,7 @@ include "gdal.pxi"
 import logging
 import uuid
 
+from affine import identity
 import numpy as np
 
 from rasterio._err import (
@@ -15,7 +16,7 @@ from rasterio import dtypes
 from rasterio.control import GroundControlPoint
 from rasterio.enums import Resampling
 from rasterio.errors import DriverRegistrationError, CRSError, RasterioIOError
-from rasterio.transform import Affine, from_bounds, tastes_like_gdal
+from rasterio.transform import Affine, from_bounds, guard_transform, tastes_like_gdal
 from rasterio.vfs import parse_path, vsi_path
 
 cimport numpy as np
@@ -270,6 +271,26 @@ def _reproject(
     cdef void *hTransformArg = NULL
     cdef GDALTransformerFunc pfnTransformer = NULL
     cdef GDALWarpOptions *psWOptions = NULL
+
+    # If working with identity transform, assume it is crs-less data
+    # and that translating the matrix very slightly will avoid #674
+    eps = 1e-100
+    if src_transform:
+        src_transform = guard_transform(src_transform)
+        # if src_transform is like `identity` with positive or negative `e`,
+        # translate matrix very slightly to avoid #674 and #1272.
+        if src_transform.almost_equals(identity) or src_transform.almost_equals(Affine(1, 0, 0, 0, -1, 0)):
+            src_transform = src_transform.translation(eps, eps)
+    if dst_transform:
+        dst_transform = guard_transform(dst_transform)
+        if dst_transform.almost_equals(identity) or dst_transform.almost_equals(Affine(1, 0, 0, 0, -1, 0)):
+            dst_transform = dst_transform.translation(eps, eps)
+
+    # Convert transforms to GDAL format.
+    if src_transform:
+        src_transform = guard_transform(src_transform).to_gdal()
+    if dst_transform:
+        dst_transform = guard_transform(dst_transform).to_gdal()
 
     # Validate nodata values immediately.
     if src_nodata is not None:
@@ -566,7 +587,6 @@ def _calculate_default_transform(src_crs, dst_crs, width, height,
 
     if all(x is not None for x in (left, bottom, right, top)):
         transform = from_bounds(left, bottom, right, top, width, height)
-        transform = transform.to_gdal()
     elif any(x is not None for x in (left, bottom, right, top)):
         raise ValueError(
             "Some, but not all, bounding box parameters were provided.")
